--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   	</head>
 	<body>
     	<script src="lib/three.min_r96.js"></script>
+		<script src="lib/OrbitControls.js"></script>
+		<script src="lib/Tween_2018.js"></script>
+		<script src="lib/dat.gui.min.js"></script>
     	<script src="scripts/scene.js"></script>
   	</body>
 </html>
